--- a/.htaccess
+++ b/.htaccess
@@ -135,7 +135,7 @@
 ############################################
 ## enable rewrites
 
-    Options +FollowSymLinks
+    #Options +FollowSymLinks
     RewriteEngine on
 
 ############################################
